# calculator

./: .gitignore  CMakeLists.txt  main.c  math_parser.c  math_parser.h
include/calculator/: calculator.h  math_parser.h
src/: calculator.c  lexer.c  lexer.h  main.c  parser.c  parser.h
